# MAS-004_RPI-Databridge

./: .gitignore  mas004_databridge_fixes.patch  mikrotom_sim_fixes.patch  pyproject.toml
docs/: Microtom_Interface.md  Microtom_Interface_QuickStart.md  PROJECT_CONTEXT.md  SUPPORT_CHANGELOG.md  SUPPORT_RUNBOOK.md
mas004_rpi_databridge/: __init__.py  _vj6530_bridge.py  config.py  db.py  device_bridge.py  device_clients.py  device_protocols.py  esp_push_listener.py  http_client.py  inbox.py  logs.py  logstore.py  netconfig.py  ntp_sync.py  outbox.py  params.py  params_store.py  protocol.py  readme.txt  router.py  service.py  tcp_forwarder.py  vj6530_async_listener.py  vj6530_poller.py  vj6530_runtime.py  watchdog.py  webui.py  webui.py.save
master_data/: Parameterliste SAR41-MAS-004_V11.11.25.xlsx
scripts/: config.example.json  default_config.json  install.sh  mas004_deploy_targets.ps1  mas004_multirepo_status.ps1  mas004_multirepo_sync.ps1  render_html_to_pdf_playwright.py  render_markdown_to_html.py
systemd/: mas004-rpi-databridge.service
tests/: test_device_bridge_tto_mapping.py  test_params_access.py  test_params_zbc_mapping.py  test_vj6530_poller.py
