[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MAS-004_RPI-Databridge"
version = "0.1.0"
description = "Reliable HTTPS send/receive on Raspberry Pi PLC with persistent inbox/outbox + watchdog + web UI"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "pydantic>=2.6.0",
  "ping3>=4.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
mas004-databridge = "mas004_rpi_databridge.service:main"

[tool.setuptools]
packages = ["mas004_rpi_databridge"]
